# romea-ros1-common

./: .gitlab-ci.yml  romea_common.rosinstall
romea_common/: CMakeLists.txt  package.xml
romea_common_msgs/: CMakeLists.txt  package.xml
romea_common_msgs/msg/: PoseAndTwist2DStamped.msg  Position2DStamped.msg  Twist2DStamped.msg
romea_common_utils/: CMakeLists.txt  package.xml
romea_common_utils/include/romea_common_utils/: pid_factory.hpp  ros.hpp  rviz_display.hpp
romea_common_utils/include/romea_common_utils/conversions/: DiagnosticConversions.hpp  GeometryConversions.hpp  TimeConversions.hpp  TransformConversions.hpp  diagnostic_conversions.hpp  geometry_conversions.hpp  pose2d_conversions.hpp  pose3d_conversions.hpp  pose_and_twist2d_conversions.hpp  pose_and_twist3d_conversions.hpp  position2d_conversions.hpp  time_conversions.hpp  transform_conversions.hpp  twist2d_conversions.hpp  twist3d_Conversions.hpp
romea_common_utils/include/romea_common_utils/diagnostics/: DiagnosticEqualTo.hpp  DiagnosticGreaterThan.hpp  DiagnosticLowerThan.hpp  DiagnosticNLSE.hpp  DiagnosticReliability.hpp
romea_common_utils/include/romea_common_utils/params/: RosEigenParam.hpp  RosParam.hpp  algorithm_parameters.hpp  ros_eigen_param.hpp  ros_param.hpp
romea_common_utils/include/romea_common_utils/publishers/: DiagnosticPublisher.hpp  MessagePublisher.hpp  OdomPublisher.hpp  StampedMessagePublisher.hpp  TransformPublisher.hpp  data_publisher.hpp  diagnostic_publisher.hpp  message_publisher.hpp  odom_publisher.hpp  publisher.hpp  stamped_data_publisher.hpp  stamped_message_publisher.hpp  stamped_publisher.hpp  transform_publisher.hpp
romea_common_utils/include/romea_common_utils/realtime_publishers/: message_publisher.hpp  stamped_message_publisher.hpp
romea_common_utils/src/: pid_factory.cpp  rviz_display.cpp
romea_common_utils/src/conversions/: DiagnosticConversions.cpp  GeometryConversions.cpp  TimeConversions.cpp  TransformConversions.cpp  diagnostic_conversions.cpp  geometry_conversions.cpp  pose2d_conversions.cpp  pose3d_conversions.cpp  pose_and_twist2d_conversions.cpp  pose_and_twist3d_conversions.cpp  position2d_conversions.cpp  time_conversions.cpp  transform_conversions.cpp  twist2d_conversions.cpp  twist3d_conversions.cpp
romea_common_utils/src/diagnostics/: DiagnosticNLSE.cpp  DiagnosticReliability.cpp
romea_common_utils/test/: CMakeLists.txt  test_containers_bb.cpp  test_containers_grid.cpp  test_containers_ray.cpp  test_coordinates.cpp  test_geodesy.cpp  test_geometry_conversions.cpp  test_math_algorithm.cpp  test_math_euler.cpp  test_math_interval.cpp  test_math_matrix.cpp  test_monitoring.cpp  test_pointset_utils.hpp  test_pose2d_conversions.cpp  test_pose3d_conversions.cpp  test_ros_conversions.cpp  test_ros_param.test  test_ros_param_test.cpp  test_ros_publisher.test  test_ros_publisher_test.cpp  test_ros_publisher_utils.hpp  test_ros_transform.test  test_ros_transform_test.cpp  test_time.cpp  test_transform.cpp  test_twist2d_conversions.cpp  test_twist3d_conversions.cpp  test_utils.hpp
